compiler/tests/success/subarrays/x86-64/spill_partial_unknown.jazz
fn f (reg ptr u64[2] r) -> reg ptr u64[2] {
  r[0] = 1;
  return r;
}

export fn test (reg ptr u64[4] r) -> reg ptr u64[4], reg u64 {
  reg ptr u64[2] r2;
  reg u64 i;

  i = 1;
  r2 = r[i:2];
  () = #spill(r);
  r2 = f(r2);
  () = #unspill(r); // we unspill r, while it is not fully valid
  r[i:2] = r2;

  reg u64 res;
  res = r[1];

  return r, res;
}
