compiler/tests/fail/array_expansion/x86-64/sub_array_return_overflow_2.jazz
fn f (reg u64[2] r) -> reg u64[2] {
  return r;
}

export fn main () -> reg u64 {
  reg u64[2] z k;
  z[0] = 0; z[1] = 1;
  k[-1:2] = f(z); // the offset is negative!
  reg u64 res = k[0];
  return res;
}
